# OIRIA_OS_espIDF

./: CMakeLists.txt  count_loc.bat  idf_component.yml  readme.md  stuff i want to do.txt  tusb_hid_example_main.c  tusb_hid_example_main.cpp
Fboot/: bootfunctions.cpp  bootfunctions.hpp
assets/: BMP_ASSETS.h
code_stuff/: helperfunctions.cpp  helperfunctions.hpp  types.c  types.h
code_stuff/custom_vartypyes/: v_rw3de.h
code_stuff/power/: powermanager5000.c
hardware/drivers/abstraction_layers/: al_scr.c  al_scr.h
hardware/drivers/devices_i2c/: i2cHelpers.c  i2cHelpers.h
hardware/drivers/encoders/: ky040_driver.c  ky040_driver.cpp  ky040_driver.hpp
hardware/drivers/generic/: button_driver.cpp  button_driver.hpp
hardware/drivers/lcd/crt_rca_mono/: crt_rm.c  crt_rm.h
hardware/drivers/lcd/fonts/: font_avr_classics.c  font_avr_classics.h  font_basic_types.c  font_basic_types.h
hardware/drivers/lcd/st7789v2/: D_st7789v2_s3psram.c  lcDriver.c  lcDriver.h  lcdriverAddon.cpp  lcdriverAddon.hpp  t_shapes.h
hardware/drivers/psram_std/: psram_std.hpp
hardware/drivers/sd_card/: d_sdc.c  d_sdc.h
hardware/drivers/secondary_cpu/: low_power_secondary_processing.h
hardware/wiring/: wiring.h
microwiki/: microwiki_about.txt
microwiki/wiki_ulp/: about_ulp.txt
os_code/applications/fileviewwer/: MS_file_viewwer.cpp  MS_file_viewwer.hpp
os_code/applications/menu/: app_menu.cpp  app_menu.hpp
os_code/applications/toolkit/RemoteKeyboard/: app_rubberducky.cpp  keymap.cpp  keymap.hpp  tk_rd.cpp  tk_rd.hpp
os_code/applications/watch/: MS_watchapp.cpp  MS_watchapp.hpp
os_code/core/: architectureGoal.md  intercore_message.c  intercore_message.hpp
os_code/core/notification_sys/: rs_notif_dispatcher.c  rs_notif_dispatcher.h
os_code/core/rShell/: defaultAppList.hpp  s_hell.cpp  s_hell.hpp
os_code/core/rShell/enviroment/: env_vars.c  env_vars.h
os_code/core/window_env/: MWenv.cpp  MWenv.hpp  wenv_basicThemes.h
os_code/dataflow/streams/: rshell_pump.cpp  rshell_pump.hpp  rshell_streamdefs.c  rshell_streamdefs.h
os_code/middle_layer/input/: hid_t.h  input_devs_agg.hpp  input_handler.cpp  input_handler.h  input_handler.hpp
os_code/middle_layer/input/hostusb/: todo.txt  usb_hid_host.cpp  usb_hid_host.hpp
os_code/middle_layer/input/inputProscessorTask/: ipt_x.cpp  ipt_x.hpp
os_code/middle_layer/input/rubberducky/: kb_rd.cpp  kb_rd.hpp
sss/: shared_state.c  shared_state.h  sss.txt
ulp/: ulp_main.c  ulp_main.h
